--- a/Restaurant/pages/salePage.xaml
+++ b/Restaurant/pages/salePage.xaml
@@ -32,17 +32,38 @@
                 <RowDefinition Height="2*"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <TextBox x:Name="tboxSerch" Margin="5">
-
+            <TextBox x:Name="tboxSerch" Margin="5" TextChanged="tboxSerch_TextChanged">
+    
             </TextBox>
 
-            <DataGrid Grid.Row="1" Margin="5">
-
+            <DataGrid Grid.Row="1" Margin="5" Name="dgSale" AutoGenerateColumns="False" IsReadOnly="True">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Binding="{Binding Path=id}" Header="Код"/>
+                    <DataGridTextColumn Binding="{Binding Path=Name}" Header="Имя"/>
+                    <DataGridTextColumn Binding="{Binding Path=Price}" Header="Цена"/>
+                    <DataGridTextColumn Binding="{Binding Path=Weight}" Header="Вес"/>
+                    <DataGridTextColumn Binding="{Binding Path=TotalPrice}" Header="Общая цена"/>
+                    <DataGridTextColumn Binding="{Binding Path=Count}" Header="Количество"/>
+                </DataGrid.Columns>
             </DataGrid>
             <ScrollViewer Grid.Row="2">
-                <StackPanel>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel>
+                        <Label>Total</Label>
+                        <Label>Discount</Label>
+                        <Label>Sub Total</Label>
+                    </StackPanel>
+                    <StackPanel Grid.Column="1">
+                        <Label Name="lblTotal"></Label>
+                        <Label Name="lblDiscount"></Label>
+                        <Label Name="lblSubTotal"></Label>
+                    </StackPanel>
+                </Grid>
 
-                </StackPanel>
             </ScrollViewer>
 
             <Grid Grid.Row="3">
@@ -60,21 +81,61 @@
             </Grid>
         </Grid>
 
-        <ScrollViewer Grid.Column="1" Grid.Row="1">
-            
-        </ScrollViewer>
+        <Grid Grid.Column="1" Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <TextBox Margin="5" TextChanged="TextBox_TextChanged"></TextBox>
+            <ScrollViewer Grid.Row="1">
+                <StackPanel>
+                    <ListView Name="lwCategory" SelectionChanged="lwCategory_SelectionChanged">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid Height="50px" Margin="5">
+                                    <TextBlock Text="{Binding Path=Name}"  Margin="5"></TextBlock>
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </StackPanel>
+            </ScrollViewer>
+        </Grid>
 
 
-        <Grid Grid.Column="2" Grid.Row="1">
+        <Grid Grid.Column="2" Grid.Row="1" >
             <TabControl>
                 <TabItem Header="Items">
-                    <DataGrid Name="dtgItems" AutoGenerateColumns="False">
+                    <DataGrid Name="dtgItems" AutoGenerateColumns="False" IsReadOnly="True" MouseDoubleClick="dtgItems_MouseDoubleClick">
                         <DataGrid.Columns>
                             <DataGridTextColumn Binding="{Binding Path=id}" Header="Код"/>
-                            <DataGridTextColumn Binding="{Binding Path=Name}" Header="Код"/>
+                            <DataGridTextColumn Binding="{Binding Path=Name}" Header="Имя"/>
                             <DataGridTextColumn Binding="{Binding Path=Price}" Header="Цена"/>
                         </DataGrid.Columns>
                     </DataGrid>
+                </TabItem>
+                <TabItem Header="Items List">
+                    <StackPanel>
+                        <ListView Name="lwData" MouseDoubleClick="lwData_MouseDoubleClick">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition></ColumnDefinition>
+                                            <ColumnDefinition></ColumnDefinition>
+                                        </Grid.ColumnDefinitions>
+                                        <StackPanel Grid.Column="1">
+                                            <TextBlock Text="{Binding Path=id}"></TextBlock>
+                                            <TextBlock Text="{Binding Path=Name}"></TextBlock>
+                                            <TextBlock Text="{Binding Path=Weight}"></TextBlock>
+                                            <TextBlock Text="{Binding Path=Price}"></TextBlock>
+                                        </StackPanel>
+                                        <Image Source="" Stretch="UniformToFill"></Image>
+                                    </Grid>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </StackPanel>
                 </TabItem>
             </TabControl>
         </Grid>
